--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sales</string>
     <string name="bottom_nav_home">Home</string>
     <string name="bottom_nav_discover">Discover</string>
+    <string name="bottom_nav_settings">Settings</string>
 </resources>
